# zexcora

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ZEX_LICENSE.md  callbacks.py  config.dev.yaml  config.yaml  connection_manager.py  docker-compose.yaml  filebeat.yaml  pyproject.toml  requirements.txt  server.py  test.py  tss.py  tx_utils.py  verify.py  verify_benchmark.py  zex.py  zex_benchmark.py
.github/workflows/: run-test.yaml
app/: __init__.py  callbacks.py  chain.py  config.py  connection_manager.py  event_manager.py  kline_manager.py  main.py  verify.py  zex.py  zex_types.py
app/api/: cache.py  main.py
app/api/routes/: __init__.py  charts.py  drawing_templates.py  markets.py  orders.py  study_templates.py  system.py  tables.py  users.py
app/benchmarks/: config.yaml  generate_tx.py  mass_websocket_connection.py  unpack_benchmark.py  verify_benchmark.py  zex_benchmark.py
app/bot/: .envrc  __init__.py  bot.py  main.py  markets.py  single_tx.py
app/models/: response.py  transaction.py
app/monero/: address.py  base58.py  const.py  keccak.py  numbers.py
app/proto/: zex.proto  zex_pb2.py  zex_pb2.pyi
app/tests/: test.py
app/utils/logger/: __init__.py  types.py
app/wallet/: config.yaml  deposit.py
app/web3-utils/: contract.py
bot/: .env.example  __init__.py  aggregator.py  bot.py  main.py  markets.py  proxy.py  single_tx.py  zex_bot.py
event_distributor/: config.py  config.yaml  main.py  pyproject.toml
frost_node/: .env.example  __init__.py  abstracts.py  config.py  node.py  run-dkg.py
models/: response.py  transaction.py
state_manager/: config.py  config.yaml  main.py  pyproject.toml
tests/: blackbox_test.py  conftest.py  test.py  test_zex.py
tss/: dkg.py  gen_ecdsa_key.py  sa.py
ui/: app.js  ethereumjs-util.js  index.html
wallet/: Wallet.sol  config.yaml  deposit.py
wallet/abi/: hol.json
wallet/monero/: README.md  get-blocks.js  get-height.js  monero-utils.js  package.json
websocket_service/: config.py  config.yaml  connection_manager.py  main.py  pyproject.toml  singleton.py
